parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    BLOCK_COMMENT
    DEFAULT
    ASSERT
    PLUS_ASSIGN
    NATIVE
    LSHIFT
    PRIVATE
    TRY
    TRANSIENT
    CHAR_LITERAL
    RRSHIFT_ASSIGN
    MINUS_ASSIGN
    STRICTFP
    AND_ASSIGN
    SWITCH
    SUPER
    CATCH
    IMPLEMENTS
    FINALLY
    INTERFACE
    RSHIFT_ASSIGN
    REMAINDER_ASSIGN
    CASE
    ENUM
    SYNCHRONIZED
    VOLATILE
    RSHIFT
    FINAL
    BYTE
    ELLIPSIS
    DIVIDE_ASSIGN
    PACKAGE
    DO
    LINE_COMMENT
    INSTANCEOF
    SHORT
    THROWS
    OR_ASSIGN
    PROTECTED
    RRSHIFT
    THROW
    IMPORT
    ABSTRACT
    LSHIFT_ASSIGN
    XOR_ASSIGN
    MULT_ASSIGN

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ClassDeclList
Rule 2     ClassDeclList -> ClassDecl ClassDeclList
Rule 3     ClassDeclList -> empty
Rule 4     ClassDecl -> CLASS NAME ExtendClass LEFTBRACE FieldMethDecl RIGHTBRACE
Rule 5     ExtendClass -> EXTENDS NAME
Rule 6     ExtendClass -> empty
Rule 7     FieldMethDecl -> FieldMeth FieldMethDecl
Rule 8     FieldMethDecl -> empty
Rule 9     FieldMeth -> FieldDecl
Rule 10    FieldMeth -> MethDecl
Rule 11    FieldDecl -> Type NAME NAMECommaList SEMICOLON
Rule 12    NAMECommaList -> NAMEComma NAMECommaList
Rule 13    NAMECommaList -> empty
Rule 14    NAMEComma -> COMMA NAME
Rule 15    MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block
Rule 16    Accesspecifier -> PUBLIC
Rule 17    MethType -> Type
Rule 18    MethType -> VOID
Rule 19    Args -> Formals
Rule 20    Args -> empty
Rule 21    Formals -> Type NAME NAMETypeCommaList
Rule 22    NAMETypeCommaList -> CommaTypeId NAMETypeCommaList
Rule 23    NAMETypeCommaList -> empty
Rule 24    CommaTypeId -> COMMA Type NAME
Rule 25    Type -> INT
Rule 26    Type -> BOOLEAN
Rule 27    Type -> FLOAT
Rule 28    Type -> LONG
Rule 29    Type -> DOUBLE
Rule 30    Type -> CHAR
Rule 31    Type -> STRING_LITERAL
Rule 32    Type -> NAME
Rule 33    Type -> Array
Rule 34    Array -> Type LEFTSQRBRACKET RIGHTSQRBRACKET
Rule 35    Block -> LEFTBRACE VarDeclList StmtList RIGHTBRACE
Rule 36    StmtList -> Stmt StmtList
Rule 37    StmtList -> empty
Rule 38    VarDeclList -> NAME ExpDecl ExpDeclList SEMICOLON
Rule 39    VarDeclList -> Type NAME ExpDecl ExpDeclList SEMICOLON VarDeclList
Rule 40    VarDeclList -> empty
Rule 41    ExpDeclList -> CommaExpDecl ExpDeclList
Rule 42    ExpDeclList -> empty
Rule 43    CommaExpDecl -> COMMA NAME ExpDecl
Rule 44    ExpDecl -> ASSIGNMENT Expr
Rule 45    ExpDecl -> empty
Rule 46    Stmt -> PrintStmt
Rule 47    Stmt -> Assign SEMICOLON
Rule 48    Stmt -> Call SEMICOLON
Rule 49    Stmt -> Return
Rule 50    Stmt -> IfStmt
Rule 51    Stmt -> WhileStmt
Rule 52    Stmt -> ForStmt
Rule 53    Stmt -> BREAK SEMICOLON
Rule 54    Stmt -> CONTINUE SEMICOLON
Rule 55    Stmt -> Block
Rule 56    PrintStmt -> NAME DOT NAME DOT NAME LEFTPARENT STRING_LITERAL RIGHTPARENT SEMICOLON
Rule 57    Assign -> Location ASSIGNMENT Expr
Rule 58    Location -> NAME
Rule 59    Location -> Expr DOT NAME
Rule 60    Location -> Expr LEFTSQRBRACKET Expr RIGHTSQRBRACKET
Rule 61    Call -> Method LEFTPARENT Actuals RIGHTPARENT
Rule 62    Method -> NAME
Rule 63    Method -> Expr DOT NAME
Rule 64    Actuals -> Expr ExprCommaList
Rule 65    ExprCommaList -> ExprComma ExprCommaList
Rule 66    ExprCommaList -> empty
Rule 67    ExprComma -> COMMA Expr
Rule 68    Return -> RETURN ReturnExpr SEMICOLON
Rule 69    ReturnExpr -> Expr
Rule 70    ReturnExpr -> empty
Rule 71    IfStmt -> IF LEFTPARENT Expr RIGHTPARENT Stmt ElseStmt
Rule 72    ElseStmt -> ELSE Stmt
Rule 73    ElseStmt -> empty
Rule 74    WhileStmt -> WHILE LEFTPARENT Expr RIGHTPARENT Stmt
Rule 75    ForStmt -> FOR LEFTPARENT VarDeclList Actuals SEMICOLON Actuals RIGHTPARENT Stmt
Rule 76    Expr -> Location
Rule 77    Expr -> Call
Rule 78    Expr -> THIS
Rule 79    Expr -> NewId
Rule 80    Expr -> NewTypeExpr
Rule 81    Expr -> ExprLength
Rule 82    Expr -> ExprBinaryExpr
Rule 83    Expr -> UnaryExpr
Rule 84    Expr -> Literal
Rule 85    Expr -> Number
Rule 86    Expr -> ParentExprParent
Rule 87    NewId -> NEW NAME LEFTPARENT RIGHTPARENT
Rule 88    NewTypeExpr -> NEW Type LEFTSQRBRACKET Expr LEFTSQRBRACKET
Rule 89    ExprLength -> Expr DOT LENGTH
Rule 90    ExprBinaryExpr -> Expr PLUS Expr
Rule 91    ExprBinaryExpr -> Expr MINUS Expr
Rule 92    ExprBinaryExpr -> Expr MULTIPLY Expr
Rule 93    ExprBinaryExpr -> Expr DIVIDE Expr
Rule 94    ExprBinaryExpr -> Expr MODULO Expr
Rule 95    ExprBinaryExpr -> Expr AND Expr
Rule 96    ExprBinaryExpr -> Expr OR Expr
Rule 97    ExprBinaryExpr -> Expr CONCAT Expr
Rule 98    ExprBinaryExpr -> Expr LT Expr
Rule 99    ExprBinaryExpr -> Expr LTEQ Expr
Rule 100   ExprBinaryExpr -> Expr GT Expr
Rule 101   ExprBinaryExpr -> Expr GTEQ Expr
Rule 102   ExprBinaryExpr -> Expr EQUAL Expr
Rule 103   ExprBinaryExpr -> Expr NEQUAL Expr
Rule 104   UnaryExpr -> Expr NOT
Rule 105   UnaryExpr -> Expr MINUSMINUS
Rule 106   UnaryExpr -> Expr PLUSPLUS
Rule 107   Literal -> INT
Rule 108   Literal -> STRING_LITERAL
Rule 109   Literal -> TRUE
Rule 110   Literal -> FALSE
Rule 111   Literal -> NULL
Rule 112   ParentExprParent -> LEFTPARENT Expr RIGHTPARENT
Rule 113   Number -> NUMBER
Rule 114   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 95
AND_ASSIGN           : 
ASSERT               : 
ASSIGNMENT           : 44 57
BLOCK_COMMENT        : 
BOOLEAN              : 26
BREAK                : 53
BYTE                 : 
CASE                 : 
CATCH                : 
CHAR                 : 30
CHAR_LITERAL         : 
CLASS                : 4
COMMA                : 14 24 43 67
CONCAT               : 97
CONTINUE             : 54
DEFAULT              : 
DIVIDE               : 93
DIVIDE_ASSIGN        : 
DO                   : 
DOT                  : 56 56 59 63 89
DOUBLE               : 29
ELLIPSIS             : 
ELSE                 : 72
ENUM                 : 
EQUAL                : 102
EXTENDS              : 5
FALSE                : 110
FINAL                : 
FINALLY              : 
FLOAT                : 27
FOR                  : 75
GT                   : 100
GTEQ                 : 101
IF                   : 71
IMPLEMENTS           : 
IMPORT               : 
INSTANCEOF           : 
INT                  : 25 107
INTERFACE            : 
LEFTBRACE            : 4 35
LEFTPARENT           : 15 56 61 71 74 75 87 112
LEFTSQRBRACKET       : 34 60 88 88
LENGTH               : 89
LINE_COMMENT         : 
LONG                 : 28
LSHIFT               : 
LSHIFT_ASSIGN        : 
LT                   : 98
LTEQ                 : 99
MINUS                : 91
MINUSMINUS           : 105
MINUS_ASSIGN         : 
MODULO               : 94
MULTIPLY             : 92
MULT_ASSIGN          : 
NAME                 : 4 5 11 14 15 21 24 32 38 39 43 56 56 56 58 59 62 63 87
NATIVE               : 
NEQUAL               : 103
NEW                  : 87 88
NOT                  : 104
NULL                 : 111
NUMBER               : 113
OR                   : 96
OR_ASSIGN            : 
PACKAGE              : 
PLUS                 : 90
PLUSPLUS             : 106
PLUS_ASSIGN          : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 16
REMAINDER_ASSIGN     : 
RETURN               : 68
RIGHTBRACE           : 4 35
RIGHTPARENT          : 15 56 61 71 74 75 87 112
RIGHTSQRBRACKET      : 34 60
RRSHIFT              : 
RRSHIFT_ASSIGN       : 
RSHIFT               : 
RSHIFT_ASSIGN        : 
SEMICOLON            : 11 38 39 47 48 53 54 56 68 75
SHORT                : 
STATIC               : 15
STRICTFP             : 
STRING_LITERAL       : 31 56 108
SUPER                : 
SWITCH               : 
SYNCHRONIZED         : 
THIS                 : 78
THROW                : 
THROWS               : 
TRANSIENT            : 
TRUE                 : 109
TRY                  : 
VOID                 : 18
VOLATILE             : 
WHILE                : 74
XOR_ASSIGN           : 
error                : 

Nonterminals, with rules where they appear

Accesspecifier       : 15
Actuals              : 61 75 75
Args                 : 15
Array                : 33
Assign               : 47
Block                : 15 55
Call                 : 48 77
ClassDecl            : 2
ClassDeclList        : 1 2
CommaExpDecl         : 41
CommaTypeId          : 22
ElseStmt             : 71
ExpDecl              : 38 39 43
ExpDeclList          : 38 39 41
Expr                 : 44 57 59 60 60 63 64 67 69 71 74 88 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 105 106 112
ExprBinaryExpr       : 82
ExprComma            : 65
ExprCommaList        : 64 65
ExprLength           : 81
ExtendClass          : 4
FieldDecl            : 9
FieldMeth            : 7
FieldMethDecl        : 4 7
ForStmt              : 52
Formals              : 19
IfStmt               : 50
Literal              : 84
Location             : 57 76
MethDecl             : 10
MethType             : 15
Method               : 61
NAMEComma            : 12
NAMECommaList        : 11 12
NAMETypeCommaList    : 21 22
NewId                : 79
NewTypeExpr          : 80
Number               : 85
ParentExprParent     : 86
PrintStmt            : 46
Program              : 0
Return               : 49
ReturnExpr           : 68
Stmt                 : 36 71 72 74 75
StmtList             : 35 36
Type                 : 11 17 21 24 34 39 88
UnaryExpr            : 83
VarDeclList          : 35 39 75
WhileStmt            : 51
empty                : 3 6 8 13 20 23 37 40 42 45 66 70 73

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . ClassDeclList
    (2) ClassDeclList -> . ClassDecl ClassDeclList
    (3) ClassDeclList -> . empty
    (4) ClassDecl -> . CLASS NAME ExtendClass LEFTBRACE FieldMethDecl RIGHTBRACE
    (114) empty -> .

    CLASS           shift and go to state 2
    $end            reduce using rule 114 (empty -> .)

    Program                        shift and go to state 1
    ClassDecl                      shift and go to state 3
    ClassDeclList                  shift and go to state 4
    empty                          shift and go to state 5

state 1

    (0) S' -> Program .



state 2

    (4) ClassDecl -> CLASS . NAME ExtendClass LEFTBRACE FieldMethDecl RIGHTBRACE

    NAME            shift and go to state 6


state 3

    (2) ClassDeclList -> ClassDecl . ClassDeclList
    (2) ClassDeclList -> . ClassDecl ClassDeclList
    (3) ClassDeclList -> . empty
    (4) ClassDecl -> . CLASS NAME ExtendClass LEFTBRACE FieldMethDecl RIGHTBRACE
    (114) empty -> .

    CLASS           shift and go to state 2
    $end            reduce using rule 114 (empty -> .)

    ClassDecl                      shift and go to state 3
    ClassDeclList                  shift and go to state 7
    empty                          shift and go to state 5

state 4

    (1) Program -> ClassDeclList .

    $end            reduce using rule 1 (Program -> ClassDeclList .)


state 5

    (3) ClassDeclList -> empty .

    $end            reduce using rule 3 (ClassDeclList -> empty .)


state 6

    (4) ClassDecl -> CLASS NAME . ExtendClass LEFTBRACE FieldMethDecl RIGHTBRACE
    (5) ExtendClass -> . EXTENDS NAME
    (6) ExtendClass -> . empty
    (114) empty -> .

    EXTENDS         shift and go to state 9
    LEFTBRACE       reduce using rule 114 (empty -> .)

    ExtendClass                    shift and go to state 8
    empty                          shift and go to state 10

state 7

    (2) ClassDeclList -> ClassDecl ClassDeclList .

    $end            reduce using rule 2 (ClassDeclList -> ClassDecl ClassDeclList .)


state 8

    (4) ClassDecl -> CLASS NAME ExtendClass . LEFTBRACE FieldMethDecl RIGHTBRACE

    LEFTBRACE       shift and go to state 11


state 9

    (5) ExtendClass -> EXTENDS . NAME

    NAME            shift and go to state 12


state 10

    (6) ExtendClass -> empty .

    LEFTBRACE       reduce using rule 6 (ExtendClass -> empty .)


state 11

    (4) ClassDecl -> CLASS NAME ExtendClass LEFTBRACE . FieldMethDecl RIGHTBRACE
    (7) FieldMethDecl -> . FieldMeth FieldMethDecl
    (8) FieldMethDecl -> . empty
    (9) FieldMeth -> . FieldDecl
    (10) FieldMeth -> . MethDecl
    (114) empty -> .
    (11) FieldDecl -> . Type NAME NAMECommaList SEMICOLON
    (15) MethDecl -> . Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block
    (25) Type -> . INT
    (26) Type -> . BOOLEAN
    (27) Type -> . FLOAT
    (28) Type -> . LONG
    (29) Type -> . DOUBLE
    (30) Type -> . CHAR
    (31) Type -> . STRING_LITERAL
    (32) Type -> . NAME
    (33) Type -> . Array
    (16) Accesspecifier -> . PUBLIC
    (34) Array -> . Type LEFTSQRBRACKET RIGHTSQRBRACKET

    RIGHTBRACE      reduce using rule 114 (empty -> .)
    INT             shift and go to state 29
    BOOLEAN         shift and go to state 20
    FLOAT           shift and go to state 25
    LONG            shift and go to state 19
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 21
    STRING_LITERAL  shift and go to state 16
    NAME            shift and go to state 24
    PUBLIC          shift and go to state 22

    MethDecl                       shift and go to state 23
    FieldMethDecl                  shift and go to state 13
    Type                           shift and go to state 14
    Accesspecifier                 shift and go to state 15
    empty                          shift and go to state 26
    Array                          shift and go to state 18
    FieldMeth                      shift and go to state 28
    FieldDecl                      shift and go to state 27

state 12

    (5) ExtendClass -> EXTENDS NAME .

    LEFTBRACE       reduce using rule 5 (ExtendClass -> EXTENDS NAME .)


state 13

    (4) ClassDecl -> CLASS NAME ExtendClass LEFTBRACE FieldMethDecl . RIGHTBRACE

    RIGHTBRACE      shift and go to state 30


state 14

    (11) FieldDecl -> Type . NAME NAMECommaList SEMICOLON
    (34) Array -> Type . LEFTSQRBRACKET RIGHTSQRBRACKET

    NAME            shift and go to state 31
    LEFTSQRBRACKET  shift and go to state 32


state 15

    (15) MethDecl -> Accesspecifier . STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block

    STATIC          shift and go to state 33


state 16

    (31) Type -> STRING_LITERAL .

    NAME            reduce using rule 31 (Type -> STRING_LITERAL .)
    LEFTSQRBRACKET  reduce using rule 31 (Type -> STRING_LITERAL .)


state 17

    (29) Type -> DOUBLE .

    NAME            reduce using rule 29 (Type -> DOUBLE .)
    LEFTSQRBRACKET  reduce using rule 29 (Type -> DOUBLE .)


state 18

    (33) Type -> Array .

    NAME            reduce using rule 33 (Type -> Array .)
    LEFTSQRBRACKET  reduce using rule 33 (Type -> Array .)


state 19

    (28) Type -> LONG .

    NAME            reduce using rule 28 (Type -> LONG .)
    LEFTSQRBRACKET  reduce using rule 28 (Type -> LONG .)


state 20

    (26) Type -> BOOLEAN .

    NAME            reduce using rule 26 (Type -> BOOLEAN .)
    LEFTSQRBRACKET  reduce using rule 26 (Type -> BOOLEAN .)


state 21

    (30) Type -> CHAR .

    NAME            reduce using rule 30 (Type -> CHAR .)
    LEFTSQRBRACKET  reduce using rule 30 (Type -> CHAR .)


state 22

    (16) Accesspecifier -> PUBLIC .

    STATIC          reduce using rule 16 (Accesspecifier -> PUBLIC .)


state 23

    (10) FieldMeth -> MethDecl .

    INT             reduce using rule 10 (FieldMeth -> MethDecl .)
    BOOLEAN         reduce using rule 10 (FieldMeth -> MethDecl .)
    FLOAT           reduce using rule 10 (FieldMeth -> MethDecl .)
    LONG            reduce using rule 10 (FieldMeth -> MethDecl .)
    DOUBLE          reduce using rule 10 (FieldMeth -> MethDecl .)
    CHAR            reduce using rule 10 (FieldMeth -> MethDecl .)
    STRING_LITERAL  reduce using rule 10 (FieldMeth -> MethDecl .)
    NAME            reduce using rule 10 (FieldMeth -> MethDecl .)
    PUBLIC          reduce using rule 10 (FieldMeth -> MethDecl .)
    RIGHTBRACE      reduce using rule 10 (FieldMeth -> MethDecl .)


state 24

    (32) Type -> NAME .

    LEFTSQRBRACKET  reduce using rule 32 (Type -> NAME .)
    NAME            reduce using rule 32 (Type -> NAME .)


state 25

    (27) Type -> FLOAT .

    NAME            reduce using rule 27 (Type -> FLOAT .)
    LEFTSQRBRACKET  reduce using rule 27 (Type -> FLOAT .)


state 26

    (8) FieldMethDecl -> empty .

    RIGHTBRACE      reduce using rule 8 (FieldMethDecl -> empty .)


state 27

    (9) FieldMeth -> FieldDecl .

    INT             reduce using rule 9 (FieldMeth -> FieldDecl .)
    BOOLEAN         reduce using rule 9 (FieldMeth -> FieldDecl .)
    FLOAT           reduce using rule 9 (FieldMeth -> FieldDecl .)
    LONG            reduce using rule 9 (FieldMeth -> FieldDecl .)
    DOUBLE          reduce using rule 9 (FieldMeth -> FieldDecl .)
    CHAR            reduce using rule 9 (FieldMeth -> FieldDecl .)
    STRING_LITERAL  reduce using rule 9 (FieldMeth -> FieldDecl .)
    NAME            reduce using rule 9 (FieldMeth -> FieldDecl .)
    PUBLIC          reduce using rule 9 (FieldMeth -> FieldDecl .)
    RIGHTBRACE      reduce using rule 9 (FieldMeth -> FieldDecl .)


state 28

    (7) FieldMethDecl -> FieldMeth . FieldMethDecl
    (7) FieldMethDecl -> . FieldMeth FieldMethDecl
    (8) FieldMethDecl -> . empty
    (9) FieldMeth -> . FieldDecl
    (10) FieldMeth -> . MethDecl
    (114) empty -> .
    (11) FieldDecl -> . Type NAME NAMECommaList SEMICOLON
    (15) MethDecl -> . Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block
    (25) Type -> . INT
    (26) Type -> . BOOLEAN
    (27) Type -> . FLOAT
    (28) Type -> . LONG
    (29) Type -> . DOUBLE
    (30) Type -> . CHAR
    (31) Type -> . STRING_LITERAL
    (32) Type -> . NAME
    (33) Type -> . Array
    (16) Accesspecifier -> . PUBLIC
    (34) Array -> . Type LEFTSQRBRACKET RIGHTSQRBRACKET

    RIGHTBRACE      reduce using rule 114 (empty -> .)
    INT             shift and go to state 29
    BOOLEAN         shift and go to state 20
    FLOAT           shift and go to state 25
    LONG            shift and go to state 19
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 21
    STRING_LITERAL  shift and go to state 16
    NAME            shift and go to state 24
    PUBLIC          shift and go to state 22

    MethDecl                       shift and go to state 23
    FieldMethDecl                  shift and go to state 34
    Type                           shift and go to state 14
    Accesspecifier                 shift and go to state 15
    empty                          shift and go to state 26
    Array                          shift and go to state 18
    FieldMeth                      shift and go to state 28
    FieldDecl                      shift and go to state 27

state 29

    (25) Type -> INT .

    NAME            reduce using rule 25 (Type -> INT .)
    LEFTSQRBRACKET  reduce using rule 25 (Type -> INT .)


state 30

    (4) ClassDecl -> CLASS NAME ExtendClass LEFTBRACE FieldMethDecl RIGHTBRACE .

    CLASS           reduce using rule 4 (ClassDecl -> CLASS NAME ExtendClass LEFTBRACE FieldMethDecl RIGHTBRACE .)
    $end            reduce using rule 4 (ClassDecl -> CLASS NAME ExtendClass LEFTBRACE FieldMethDecl RIGHTBRACE .)


state 31

    (11) FieldDecl -> Type NAME . NAMECommaList SEMICOLON
    (12) NAMECommaList -> . NAMEComma NAMECommaList
    (13) NAMECommaList -> . empty
    (14) NAMEComma -> . COMMA NAME
    (114) empty -> .

    COMMA           shift and go to state 35
    SEMICOLON       reduce using rule 114 (empty -> .)

    NAMECommaList                  shift and go to state 37
    NAMEComma                      shift and go to state 36
    empty                          shift and go to state 38

state 32

    (34) Array -> Type LEFTSQRBRACKET . RIGHTSQRBRACKET

    RIGHTSQRBRACKET shift and go to state 39


state 33

    (15) MethDecl -> Accesspecifier STATIC . MethType NAME LEFTPARENT Args RIGHTPARENT Block
    (17) MethType -> . Type
    (18) MethType -> . VOID
    (25) Type -> . INT
    (26) Type -> . BOOLEAN
    (27) Type -> . FLOAT
    (28) Type -> . LONG
    (29) Type -> . DOUBLE
    (30) Type -> . CHAR
    (31) Type -> . STRING_LITERAL
    (32) Type -> . NAME
    (33) Type -> . Array
    (34) Array -> . Type LEFTSQRBRACKET RIGHTSQRBRACKET

    VOID            shift and go to state 41
    INT             shift and go to state 29
    BOOLEAN         shift and go to state 20
    FLOAT           shift and go to state 25
    LONG            shift and go to state 19
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 21
    STRING_LITERAL  shift and go to state 16
    NAME            shift and go to state 24

    Array                          shift and go to state 18
    Type                           shift and go to state 40
    MethType                       shift and go to state 42

state 34

    (7) FieldMethDecl -> FieldMeth FieldMethDecl .

    RIGHTBRACE      reduce using rule 7 (FieldMethDecl -> FieldMeth FieldMethDecl .)


state 35

    (14) NAMEComma -> COMMA . NAME

    NAME            shift and go to state 43


state 36

    (12) NAMECommaList -> NAMEComma . NAMECommaList
    (12) NAMECommaList -> . NAMEComma NAMECommaList
    (13) NAMECommaList -> . empty
    (14) NAMEComma -> . COMMA NAME
    (114) empty -> .

    COMMA           shift and go to state 35
    SEMICOLON       reduce using rule 114 (empty -> .)

    NAMECommaList                  shift and go to state 44
    NAMEComma                      shift and go to state 36
    empty                          shift and go to state 38

state 37

    (11) FieldDecl -> Type NAME NAMECommaList . SEMICOLON

    SEMICOLON       shift and go to state 45


state 38

    (13) NAMECommaList -> empty .

    SEMICOLON       reduce using rule 13 (NAMECommaList -> empty .)


state 39

    (34) Array -> Type LEFTSQRBRACKET RIGHTSQRBRACKET .

    NAME            reduce using rule 34 (Array -> Type LEFTSQRBRACKET RIGHTSQRBRACKET .)
    LEFTSQRBRACKET  reduce using rule 34 (Array -> Type LEFTSQRBRACKET RIGHTSQRBRACKET .)


state 40

    (17) MethType -> Type .
    (34) Array -> Type . LEFTSQRBRACKET RIGHTSQRBRACKET

    NAME            reduce using rule 17 (MethType -> Type .)
    LEFTSQRBRACKET  shift and go to state 32


state 41

    (18) MethType -> VOID .

    NAME            reduce using rule 18 (MethType -> VOID .)


state 42

    (15) MethDecl -> Accesspecifier STATIC MethType . NAME LEFTPARENT Args RIGHTPARENT Block

    NAME            shift and go to state 46


state 43

    (14) NAMEComma -> COMMA NAME .

    COMMA           reduce using rule 14 (NAMEComma -> COMMA NAME .)
    SEMICOLON       reduce using rule 14 (NAMEComma -> COMMA NAME .)


state 44

    (12) NAMECommaList -> NAMEComma NAMECommaList .

    SEMICOLON       reduce using rule 12 (NAMECommaList -> NAMEComma NAMECommaList .)


state 45

    (11) FieldDecl -> Type NAME NAMECommaList SEMICOLON .

    INT             reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)
    BOOLEAN         reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)
    FLOAT           reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)
    LONG            reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)
    DOUBLE          reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)
    CHAR            reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)
    STRING_LITERAL  reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)
    NAME            reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)
    PUBLIC          reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)
    RIGHTBRACE      reduce using rule 11 (FieldDecl -> Type NAME NAMECommaList SEMICOLON .)


state 46

    (15) MethDecl -> Accesspecifier STATIC MethType NAME . LEFTPARENT Args RIGHTPARENT Block

    LEFTPARENT      shift and go to state 47


state 47

    (15) MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT . Args RIGHTPARENT Block
    (19) Args -> . Formals
    (20) Args -> . empty
    (21) Formals -> . Type NAME NAMETypeCommaList
    (114) empty -> .
    (25) Type -> . INT
    (26) Type -> . BOOLEAN
    (27) Type -> . FLOAT
    (28) Type -> . LONG
    (29) Type -> . DOUBLE
    (30) Type -> . CHAR
    (31) Type -> . STRING_LITERAL
    (32) Type -> . NAME
    (33) Type -> . Array
    (34) Array -> . Type LEFTSQRBRACKET RIGHTSQRBRACKET

    RIGHTPARENT     reduce using rule 114 (empty -> .)
    INT             shift and go to state 29
    BOOLEAN         shift and go to state 20
    FLOAT           shift and go to state 25
    LONG            shift and go to state 19
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 21
    STRING_LITERAL  shift and go to state 16
    NAME            shift and go to state 24

    Type                           shift and go to state 48
    Array                          shift and go to state 18
    Formals                        shift and go to state 49
    Args                           shift and go to state 51
    empty                          shift and go to state 50

state 48

    (21) Formals -> Type . NAME NAMETypeCommaList
    (34) Array -> Type . LEFTSQRBRACKET RIGHTSQRBRACKET

    NAME            shift and go to state 52
    LEFTSQRBRACKET  shift and go to state 32


state 49

    (19) Args -> Formals .

    RIGHTPARENT     reduce using rule 19 (Args -> Formals .)


state 50

    (20) Args -> empty .

    RIGHTPARENT     reduce using rule 20 (Args -> empty .)


state 51

    (15) MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args . RIGHTPARENT Block

    RIGHTPARENT     shift and go to state 53


state 52

    (21) Formals -> Type NAME . NAMETypeCommaList
    (22) NAMETypeCommaList -> . CommaTypeId NAMETypeCommaList
    (23) NAMETypeCommaList -> . empty
    (24) CommaTypeId -> . COMMA Type NAME
    (114) empty -> .

    COMMA           shift and go to state 54
    RIGHTPARENT     reduce using rule 114 (empty -> .)

    NAMETypeCommaList              shift and go to state 55
    empty                          shift and go to state 57
    CommaTypeId                    shift and go to state 56

state 53

    (15) MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT . Block
    (35) Block -> . LEFTBRACE VarDeclList StmtList RIGHTBRACE

    LEFTBRACE       shift and go to state 59

    Block                          shift and go to state 58

state 54

    (24) CommaTypeId -> COMMA . Type NAME
    (25) Type -> . INT
    (26) Type -> . BOOLEAN
    (27) Type -> . FLOAT
    (28) Type -> . LONG
    (29) Type -> . DOUBLE
    (30) Type -> . CHAR
    (31) Type -> . STRING_LITERAL
    (32) Type -> . NAME
    (33) Type -> . Array
    (34) Array -> . Type LEFTSQRBRACKET RIGHTSQRBRACKET

    INT             shift and go to state 29
    BOOLEAN         shift and go to state 20
    FLOAT           shift and go to state 25
    LONG            shift and go to state 19
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 21
    STRING_LITERAL  shift and go to state 16
    NAME            shift and go to state 24

    Array                          shift and go to state 18
    Type                           shift and go to state 60

state 55

    (21) Formals -> Type NAME NAMETypeCommaList .

    RIGHTPARENT     reduce using rule 21 (Formals -> Type NAME NAMETypeCommaList .)


state 56

    (22) NAMETypeCommaList -> CommaTypeId . NAMETypeCommaList
    (22) NAMETypeCommaList -> . CommaTypeId NAMETypeCommaList
    (23) NAMETypeCommaList -> . empty
    (24) CommaTypeId -> . COMMA Type NAME
    (114) empty -> .

    COMMA           shift and go to state 54
    RIGHTPARENT     reduce using rule 114 (empty -> .)

    NAMETypeCommaList              shift and go to state 61
    empty                          shift and go to state 57
    CommaTypeId                    shift and go to state 56

state 57

    (23) NAMETypeCommaList -> empty .

    RIGHTPARENT     reduce using rule 23 (NAMETypeCommaList -> empty .)


state 58

    (15) MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .

    INT             reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)
    BOOLEAN         reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)
    FLOAT           reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)
    LONG            reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)
    DOUBLE          reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)
    CHAR            reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)
    STRING_LITERAL  reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)
    NAME            reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)
    PUBLIC          reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)
    RIGHTBRACE      reduce using rule 15 (MethDecl -> Accesspecifier STATIC MethType NAME LEFTPARENT Args RIGHTPARENT Block .)


state 59

    (35) Block -> LEFTBRACE . VarDeclList StmtList RIGHTBRACE
    (38) VarDeclList -> . NAME ExpDecl ExpDeclList SEMICOLON
    (39) VarDeclList -> . Type NAME ExpDecl ExpDeclList SEMICOLON VarDeclList
    (40) VarDeclList -> . empty
    (25) Type -> . INT
    (26) Type -> . BOOLEAN
    (27) Type -> . FLOAT
    (28) Type -> . LONG
    (29) Type -> . DOUBLE
    (30) Type -> . CHAR
    (31) Type -> . STRING_LITERAL
    (32) Type -> . NAME
    (33) Type -> . Array
    (114) empty -> .
    (34) Array -> . Type LEFTSQRBRACKET RIGHTSQRBRACKET
